// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuList English returns array of menu list objects 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "My applications & coverage",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "My profile",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Log out",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Log in",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with absolute URLs 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://www.healthcare.gov/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "My applications & coverage",
    },
    Object {
      "href": "https://www.healthcare.gov/marketplace/auth/global/en_US/myProfile#settings",
      "label": "My profile",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
    Object {
      "href": "https://www.healthcare.gov/logout",
      "identifier": "logout",
      "label": "Log out",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
    Object {
      "href": "https://www.healthcare.gov/login",
      "identifier": "login",
      "label": "Log in",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with custom locale switch link 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "My applications & coverage",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "My profile",
    },
    Object {
      "href": "https://ayudalocal.cuidadodesalud.gov/es",
      "label": "Español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Log out",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://ayudalocal.cuidadodesalud.gov/es",
      "label": "Español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Log in",
    },
  ],
}
`;

exports[`MenuList English returns array of menu list objects with subpath 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "My applications & coverage",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "My profile",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/tax-tool/",
      "label": "Español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Log out",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/tax-tool/",
      "label": "Español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Log in",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "Mis solicitudes & cobertura",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "Mi perfil",
    },
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "English",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Finalizar sesión",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "English",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Iniciar sesión",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with absolute URLs 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "Mis solicitudes & cobertura",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "Mi perfil",
    },
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "English",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/logout",
      "identifier": "logout",
      "label": "Finalizar sesión",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/",
      "label": "English",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/login",
      "identifier": "login",
      "label": "Iniciar sesión",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with custom locale switch link 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "Mis solicitudes & cobertura",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "Mi perfil",
    },
    Object {
      "href": "https://localhelp.healthcare.gov",
      "label": "English",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Finalizar sesión",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://localhelp.healthcare.gov",
      "label": "English",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Iniciar sesión",
    },
  ],
}
`;

exports[`MenuList Spanish returns array of menu list objects with subpath 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#landingPage",
      "label": "Mis solicitudes & cobertura",
    },
    Object {
      "href": "/marketplace/auth/global/es_MX/myProfile#settings",
      "label": "Mi perfil",
    },
    Object {
      "href": "https://www.healthcare.gov/tax-tool/",
      "label": "English",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Finalizar sesión",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.healthcare.gov/tax-tool/",
      "label": "English",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Iniciar sesión",
    },
  ],
}
`;

exports[`MenuList leaves out locale links if hideLanguageSwitch true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "My applications & coverage",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "My profile",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Log out",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Log in",
    },
  ],
}
`;

exports[`MenuList leaves out login link if hideLoginLink true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "My applications & coverage",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "My profile",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Log out",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
  ],
}
`;

exports[`MenuList leaves out logout link if hideLogoutLink true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#landingPage",
      "label": "My applications & coverage",
    },
    Object {
      "href": "/marketplace/auth/global/en_US/myProfile#settings",
      "label": "My profile",
    },
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Log in",
    },
  ],
}
`;

exports[`MenuList leaves out the myProfile and myApplicationsAndCoverage when customLinksPassedIn is true 1`] = `
Object {
  "logged-in": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
    Object {
      "href": "/logout",
      "identifier": "logout",
      "label": "Log out",
    },
  ],
  "logged-out": Array [
    Object {
      "href": "https://www.cuidadodesalud.gov/es/",
      "label": "Español",
    },
    Object {
      "href": "/login",
      "identifier": "login",
      "label": "Log in",
    },
  ],
}
`;
